--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -42,6 +42,9 @@ body {
 main {
   padding: 57px 27px;
   color: white;
+  background-image: url('./components/react-icon-large.png');
+  background-repeat: no-repeat;
+  background-position: right 75%;
 }
 
 .main-title {
