--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -4,67 +4,36 @@
 
 body {
   margin: 0;
-  background-color: #282d35;
 }
 
 
 /* Nav Bar CSS */
 
-.header-nav {
+.main-nav {
+  height: 70px;
   display: flex;
-  align-items: center;
-  background: darkgreen;
-  padding: 30px 25px;
+  padding: 20px 36px;
+  box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
 }
 
-.nav-logo-text, .nav-title {
-  margin: 0;
-}
-
-.nav-logo-text {
-  margin-right: auto;
-  color: #61dafb;
-  font-weight: 700;
-  font-size: 22px;
-}
-
-.nav-title {
-  color: #DEEBF8;
-  font-weight: 600;
-}
-
-.react-logo {
-  margin-right: 7px;
+.airbnb-logo {
+  width: 100px;
 }
 
 /* Main Content CSS */
 
-main {
-  padding: 57px 27px;
-  color: white;
-  background-image: url('./components/react-icon-large.png');
-  background-repeat: no-repeat;
-  background-position: right 75%;
+.main-image {
+  display: flex;
+  height: 200px;
+  
 }
 
-.main-title {
-  margin: 0;
-  font-size: 39px;
-  letter-spacing: -0.05em;
+.main-h1, .main-paragraph {
+  padding: 0% 10%;
 }
 
-.main-facts {
-  margin-top: 46px;
-}
-
-.main-facts > li {
-  padding-block: 10px;
-}
-
-.main-facts > li::marker {
-  font-size: 1.4rem;
-  color: #61dafb;
-
+.main-paragraph {
+  max-width: 70%;
 }
 
 /* Footer CSS */
