--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -16,24 +16,109 @@ body {
   box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
 }
 
+.gray {
+  color: #918E9B;
+}
+
 .airbnb-logo {
   width: 100px;
 }
 
 /* Main Content CSS */
 
-.main-image {
-  display: flex;
-  height: 200px;
-  
+section {
+  padding: 20px;
 }
 
-.main-h1, .main-paragraph {
-  padding: 0% 10%;
+.main-section {
+  display: flex;
+  flex-direction: column;
+}
+
+.main-image {
+  max-width: 400px;
+  align-self: center;
+}
+
+.main-h1 {
+  margin-bottom: 16px;
 }
 
 .main-paragraph {
-  max-width: 70%;
+  margin-top: 0;
+}
+
+.card {
+  width: 175px;
+  font-size: 12px;
+}
+
+.card-photo {
+  width: 100%;
+  border-radius: 9px;
+}
+
+.card.stats {
+  display: flex;
+  align-items: center;
+}
+
+.card-star {
+  height: 14px;
+}
+
+.card-description {
+  margin-bottom: 10px;
+}
+
+.card-price {
+  margin-top: 0;
+}
+
+.contact-cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.contact-card {
+  flex-basis: 225px;
+  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  padding: 13px;
+  padding-bottom: 20px;
+  background-color: white; 
+}
+
+.contact-photo {
+  width: 100%;
+  height: auto;
+  align-self: center;
+  border-radius: 5px;
+  object-fit: cover;
+}
+
+.contact-card > h3 {
+  font-weight: 700;
+  font-size: 18px;
+}
+
+.info-group {
+  display: flex;
+  align-items: center;
+}
+
+.info-group > img {
+  height: 11px;
+  margin-right: 8px;
+}
+
+.info-group > p {
+  margin-block: 3px;
+  font-size: 12px;
+  color: #2b283a;
 }
 
 /* Footer CSS */
