--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -92,7 +92,7 @@ section {
   background-color: white; 
 }
 
-.contact-photo {
+.contact-card > img {
   width: 100%;
   height: auto;
   align-self: center;
