--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -6,6 +6,10 @@ body {
   margin: 0;
 }
 
+.gray {
+  color: #918E9B;
+}
+
 
 /* Nav Bar CSS */
 
@@ -47,6 +51,17 @@ section {
 .card {
   width: 175px;
   font-size: 12px;
+  flex: 0 0 auto;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.cards-list {
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 20px;
+  overflow-x: auto;
 }
 
 .card-photo {
@@ -64,9 +79,20 @@ section {
 }
 
 .card-description {
-  margin-bottom: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .card-price {
-  margin-top: 0;
+  margin-top: auto;
+}
+
+.card-badge{
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  background-color: white;
+  padding: 5px 7px;
+  border-radius: 2px;
+  font-weight: bold;
 }
